ncc/testsuite/negative/cg-post.n
struct X {
  public mutable x : int;
}


class M {
  static foo (x : ref int) : void
  {
    x = 42;
  }
  
  public static Main () : void
  {
    X ().x = 3; // E: cannot load value type address

    foo (ref (X ().x)); // E: non-addressable expression passed as a ref/out parameter `x'
  }
}
